--- a/index.html
+++ b/index.html
@@ -10,17 +10,16 @@
     </head>
     <body>
         <header>
+            <div style="background-image: url('images2/texture-background.png'); background-repeat: no-repeat;"></div>
+            <h1 class="text-center" style="font-size:500%">Territorios Electorales</h1>
             <div class="container">
                 <div class="row py-5">
-                    <div class="col-11 col-sm-10 col-md-9 col-lg-8 col-xl-7 col-xxl-6 me-auto">
-                        <h1 class="text-white">Territorios Electorales</h1>
-                        <p class="lead">Chile se divide en 28 distritos electorales y tantas circunscripciones senatoriales como regiones.</p>
-                        <p>
-                            En las regiones extremas hay un distrito por circunscripción, pero el centro, que es más poblado, los distritos por región son varios; la Región Metropolitana de Santiago, donde habita el 40% de los electores del
-                            país, se divide en 7 distritos.
-                        </p>
+                    <div class="col-11 col-sm-10 col-md-9 col-lg-8 col-xl-7 col-xxl-6 py-5 me-auto">
+                        <!-- <h1 class="text-white">Territorios Electorales</h1> -->
+                        <p class="lead text-white">Chile se divide en 28 distritos electorales y tantas circunscripciones senatoriales como regiones.</p>
+                        <p class="text-white">En las regiones extremas hay un distrito por circunscripción, pero el centro, que es más poblado, los distritos por región son varios; la Región Metropolitana de Santiago, donde habita el 40% de los electores del país, se divide en 7 distritos.</p>
                     </div>
-                    <div class="d-none d-md-inline col-md-3 col-lg-4 col-xl-5 col-xxl-6 align-self-center text-center"><img src="images/votos.png" class="img-fluid" /></div>
+                    <div class="d-none d-md-inline col-md-3 col-lg-4 col-xl-5 col-xxl-6 align-self-center text-center"><img src="images2/id2.png" class="img-fluid" width="180" height=auto></div>
                 </div>
             </div>
         </header>
